creacion de mcdonalds

--- a/index.html
+++ b/index.html
@@ -8,19 +8,44 @@
 </head>
 <body>
     <nav>
-        <div class="logo">Logo</div>
+        <div class="logo"><img src="img/img/mcdonaldslogo.png" alt="logo"></div>
         <div class="toggle-btn">
             <span></span>
             <span></span>
             <span></span>
         </div>
         <ul class="nav-links">
-        <li><a href="#">inicio</a></li>
-        <li><a href="#">acerca</a></li>
-        <li><a href="#">servicios</a></li>
-        <li><a href="#">contactos</a></li>
+        <li><a href="#inicio">inicio</a></li>
+        <li><a href="#menu">menu</a></li>
+        <li><a href="#ofertas">ofertas</a></li>
+        <li><a href="#contactos">contactos</a></li>
         </ul>
     </nav>
-    <script src="script.js"></script>
+    <section id="inicio" class='parallax-section'>
+        <div class="somos">
+            <p>En 1954, un hombre llamado Ray Kroc descubrió un pequeño restaurante de hamburguesas en California, 
+                y escribió la primera página de nuestra historia. Desde el humilde comienzo como un restaurante pequeño hasta hoy, 
+                cuando nos sentimos orgullosos de habernos convertido en uno de los principales minoristas de servicio de comida del 
+                mundo con más de 36,000 restaurantes en más de 100 países.</p>
+        </div>
+        <div class="local"><img src="img/mcdonalds-una-historia-de-exito-que-nacio-en-la-ruta-66-noticias-infocif.jpg" alt="local"></div>
+    </section>
+
+    <section id="menu" class='parallax-section'>
+        <div class="menu"><img src="img/menu.jpg" alt="menu"></div>
+        <div class="clasica"><img src="img/haburgesa con queso.png" alt="clasica"></div>
+    </section>
+
+    <section id="ofertas" class='parallax-section'>
+
+    </section>
+
+    <section id="contactos" class='parallax-section'>
+
+    </section>
+
+    <script src="script.js" class='parallax-section'>
+
+    </script>
 </body>
 </html> 
